package com.sda.patterns.behavioral.command.ex1;

public interface Command {
    void execute();
}
